<resources>
    <string name="app_name">AsenDemo</string>
    <string name="demo_main">Demo主页面</string>
    <!-- -->
    <string name="quickFindView">快速FindView</string>
    <string name="testTextView">测试TextView</string>
    <string name="testButton">测试Button</string>
    <string name="testClick">测试点击</string>
    <string name="testClick2">测试点击2</string>
    <string name="openFragment">打开Fragment</string>
    <!-- -->
    <string name="testError">测试异常</string>
    <string name="openErrorFileList">打开异常文件列表</string>
    <string name="clearErrorFiles">清空异常文件</string>
    <string name="testErrorFile">测试异常-异常文件读取</string>
    <!-- -->
    <string name="quickAdapter">快速适配器</string>
    <!-- -->
    <string name="sqliteTest">数据库示例</string>
    <string name="sqliteName">姓名：</string>
    <string name="sqliteAge">年龄：</string>
    <string name="sqliteAdd">新增</string>
    <string name="sqliteDelete">删除</string>
    <string name="sqliteQuery">查询姓名</string>
    <string name="sqliteQueryAll">查询全部</string>

</resources>
