<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testError" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOpen"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/openErrorFileList" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clearErrorFiles" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvShow"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>